--- a/manager/templates/default/css/style/navbar2.css
+++ b/manager/templates/default/css/style/navbar2.css
@@ -28,7 +28,7 @@
     color: #c2c1c2;
     
 	/*width:138px;*/
-	height:25px;
+	/*height:25px;*/
     line-height: 25px;
 	border-width:2px 0 0px 1px;
 
@@ -114,7 +114,7 @@ ul#topnav {
 }
 #topnav li a {
     color: #c2c1c2;
-    height: 25px;
+    /*height: 25px;*/
     line-height: 25px;
     vertical-align: top;
     text-decoration: none;
@@ -133,4 +133,10 @@ ul#topnav {
 	pointer: cursor;
     color: #e1e2e1; 
     background-color: #626162;
+}
+
+.menu span.description {
+    color: #919291;
+    line-height: 10px;
+    font-size: .9em;
 }
